# django-basic-blog

./: .gitignore  README.md  pyproject.toml
basicblog/: manage.py
basicblog/basicblog/: asgi.py  settings.py  urls.py  wsgi.py
basicblog/members/: urls.py  views.py
basicblog/members/templates/registration/: login.html  register.html
basicblog/myblog/: forms.py  models.py  urls.py  views.py
basicblog/myblog/migrations/: 0001_initial.py  0002_post_title_tag.py  0003_alter_post_title_tag.py  0004_post_post_date.py  0005_category_post_category.py  0006_alter_post_category.py  0007_alter_post_category.py
basicblog/myblog/templates/: add_category.html  add_post.html  article_details.html  base.html  categories.html  contact.html  delete_post.html  home.html  update_post.html
