[project]
name = "django-basic-blog"
version = "0.1.0"
description = "a basic blog using django"
authors = [
    {name = "Ludwig S",email = "silvaludwig@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
